<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/kisanhub_logo"
            android:gravity="top"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:textSize="12sp"
                android:paddingBottom="10dp"
                android:maxLines="3"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_author_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_description"
                android:textSize="14sp"
                android:text="@string/authors"
                android:textColor="@color/colorGray"/>
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_description"
                android:textSize="14sp"
                android:text="@string/status"
                android:layout_alignParentRight="true"
                android:layout_marginRight="3dp"
                android:textColor="@color/colorGreen"/>

            <LinearLayout
                android:id="@+id/ll_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_author_lable"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="8dp">

                <RelativeLayout
                    android:id="@+id/rl_author_profile_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_authors_profile_1"
                        android:layout_width="32dp"
                        android:layout_height="32dp"/>

                    <TextView
                        android:id="@+id/tv_authors_name_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:layout_toRightOf="@+id/iv_authors_profile_1"
                        android:layout_toEndOf="@+id/iv_authors_profile_1" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_author_profile_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_authors_profile_2"
                        android:layout_width="32dp"
                        android:layout_height="32dp"/>

                    <TextView
                        android:id="@+id/tv_authors_name_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        android:layout_toRightOf="@+id/iv_authors_profile_2"
                        android:layout_toEndOf="@+id/iv_authors_profile_2"/>
                </RelativeLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider_one"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGray"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="6dp"
                android:layout_below="@+id/ll_profile"/>

            <LinearLayout
                android:id="@+id/ll_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider_one"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_type_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/type"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/colorGray"/>

                    <TextView
                        android:id="@+id/tv_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/dash"
                        android:textColor="@color/colorBlack"
                        android:layout_toRightOf="@+id/tv_type_lable"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">
                    <TextView
                        android:id="@+id/tv_region_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/region"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/colorGray"/>

                    <TextView
                        android:id="@+id/tv_region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/dash"
                        android:textColor="@color/colorBlack"
                        android:layout_toRightOf="@+id/tv_type_lable"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_date_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/date"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/colorGray"/>

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/dash"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/divider_two"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGray"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/ll_date"/>


            <LinearLayout
                android:id="@+id/ll_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider_two"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:id="@+id/rl_publish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp">

                    <ImageView
                        android:id="@+id/iv_publish"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_action_time"/>

                    <TextView
                        android:id="@+id/tv_publish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:layout_toRightOf="@+id/iv_publish"
                        android:layout_toEndOf="@+id/iv_publish" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_created"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="8dp">

                    <ImageView
                        android:id="@+id/iv_created"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_action_edit"/>

                    <TextView
                        android:id="@+id/tv_created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:layout_toRightOf="@+id/iv_created"
                        android:layout_toEndOf="@+id/iv_created"/>
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_subscription_package"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/subscription"
                android:paddingLeft="16dp"
                android:paddingRight="14dp"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorWhite"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark"/>


        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>